fix: fix text overflow

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body p {
   width: 0px;
   height: 0px;
   overflow: hidden;
-  display: none;
+  position: absolute;
 }
 
 .header {  
@@ -266,7 +266,11 @@ body p {
   margin-bottom: 28px;
 }
 
-.services__title p {  
+.services__title p { 
+  width: 940px;
+  height: 59.2px;
+  overflow: hidden;
+  text-overflow: ellipsis; 
   font-size: 18px;
   line-height: 30px;
   color: #767e9e;
@@ -296,7 +300,10 @@ body p {
   font-weight: 900;
 }
 
-.services__item__description { 
+.services__item__description {
+  width: 220px;
+  height: 64.8px;
+  overflow: hidden; 
   font-size: 12px;
   line-height: 22px;
   color: #767e9e;  
@@ -454,7 +461,7 @@ body p {
 
 .employees {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 300px);
   grid-column-gap: 20px;
 }
 
@@ -485,6 +492,9 @@ body p {
   font-weight: 900;
   color: #666d89;
   margin-bottom: 7px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .employee__title p {
